src/test/config/confluence/ingress-EKS.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${HELM_RELEASE_NAME}
  annotations:
    "kubernetes.io/ingress.class": nginx
    "nginx.ingress.kubernetes.io/affinity": cookie
    "nginx.ingress.kubernetes.io/affinity-mode": persistent
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "60"
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "60"
    "nginx.ingress.kubernetes.io/proxy-send-timeout": "60"
spec:
  rules:
    - host: ${HELM_RELEASE_NAME}.${eks.ingress.domain}
      http:
        paths:
          - backend:
              serviceName: ${HELM_RELEASE_NAME}
              servicePort: 80
            path: /
          - backend:
              serviceName: ${HELM_RELEASE_NAME}-synchrony
              servicePort: 80
            path: /synchrony
